Fix Big Meta Overflow.

--- a/assets/src-frontend/article-blocks/_twrp-ms.scss
+++ b/assets/src-frontend/article-blocks/_twrp-ms.scss
@@ -111,6 +111,25 @@
 		text-overflow: ellipsis;
 	}
 
+	// If an author meta is displayed alongside a date or category, then shrink
+	// only the author, If the category and date are displayed, then shrink only
+	// the category. If all 3 are displayed, shrink the author only.
+	// author-date: shrink author, date not excess 60%.
+	// author-category: shrink author, category not excess 60%
+	// category-date: shrink category, date not excess 60%
+	// all 3, shrink author, date and category not excess 40% each.
+	[class*="twrp-ms__flex-meta-wrapper--"][class*="author"] .twrp-ms__date,
+	[class*="twrp-ms__flex-meta-wrapper--"][class*="author"] .twrp-ms__category,
+	[class*="twrp-ms__flex-meta-wrapper--"]:not([class*="author"])[class*="category"] .twrp-ms__date{
+		flex-shrink: 0;
+		max-width: 60%;
+	}
+	[class*="twrp-ms__flex-meta-wrapper--"][class*="author"][class*="category"][class*="date"] .twrp-ms__date,
+	[class*="twrp-ms__flex-meta-wrapper--"][class*="author"][class*="category"][class*="date"] .twrp-ms__category {
+		flex-shrink: 0;
+		max-width: 40%;
+	}
+
 	// Hover, Focus state
 	&__link {
 		@extend .twrp-reset-box;
