--- a/assets/src-frontend/article-blocks/_twrp-ys.scss
+++ b/assets/src-frontend/article-blocks/_twrp-ys.scss
@@ -51,6 +51,7 @@
 		@extend .twrp-reset-box;
 
 		display: inline-block;
+		flex-shrink: 0;
 		overflow: hidden;
 		white-space: nowrap;
 	}
@@ -92,6 +93,25 @@
 	&__category {
 		flex-shrink: 1;
 		text-overflow: ellipsis;
+	}
+
+	// If an author meta is displayed alongside a date or category, then shrink
+	// only the author, If the category and date are displayed, then shrink only
+	// the category. If all 3 are displayed, shrink the author only.
+	// author-date: shrink author, date not excess 60%.
+	// author-category: shrink author, category not excess 60%
+	// category-date: shrink category, date not excess 60%
+	// all 3, shrink author, date and category not excess 40% each.
+	[class*="twrp-ys__flex-meta-wrapper--"][class*="author"] .twrp-ys__date,
+	[class*="twrp-ys__flex-meta-wrapper--"][class*="author"] .twrp-ys__category,
+	[class*="twrp-ys__flex-meta-wrapper--"]:not([class*="author"])[class*="category"] .twrp-ys__date{
+		flex-shrink: 0;
+		max-width: 60%;
+	}
+	[class*="twrp-ys__flex-meta-wrapper--"][class*="author"][class*="category"][class*="date"] .twrp-ys__date,
+	[class*="twrp-ys__flex-meta-wrapper--"][class*="author"][class*="category"][class*="date"] .twrp-ys__category {
+		flex-shrink: 0;
+		max-width: 40%;
 	}
 
 	&__link {
